# 32k_Mandelbrot_set_img

./: CMakeLists.txt  README.md  mandelbrot.cpp
